Changes
=======

1.0.13 (2018-12-14)
-------------------

- Fix a buffer dttype mismatch on Windows introduced in 1.0.12 (#1579).

1.0.12 (2018-12-10)
-------------------

- Rasterio's lower level I/O functions now take Py_ssize_t index arrays and
  will raise exceptions for type mismatches instead of swallowing the
  exceptions (#1076).
- The _boundless_vrt_doc function's background layer no longer needs an
  in-memory dataset and the performance regression noted in #1499 has been
  reversed. We've also found a performance improvement in masked boundless
  reads in the case that the source data is entirely valid.
- The signature of the private _boundless_vrt_doc function in rasterio.vrt has
  changed. Its background keyword argument now takes an int or float, a new
  masked keyword argument has been added, and the function returns a unicode
  str instead of ascii-encoded bytes.
- The copy and copyfiles functions of rasterio.shutil now raise an exception
  when the source and destination paths identify the same dataset (#1569).

1.0.11 (2019-11-30)
-------------------

- Prevent needless warning when making boundless reads with a fill value
  (#1499).
- The GDAL band cache is flushed at the top of build_overviews to fix #1497.
- Options --gdal-data and --proj-data have been added to the rio-env command so
  that users of Rasterio wheels can get paths to set GDAL_DATA and PROJ_LIB
  environment variables.
- The attempt to make GDAL and PROJ support file discovery and configuration
  automatic within methods of the CRS class has been reverted. Users must
  execute such code inside a `with Env()` block or set the GDAL_DATA and
  PROJ_LIB environment variables needed by GDAL.

1.0.10 (2019-11-16)
-------------------

- Avoid segmentation fault when OSRGetAuthority* functions return null
  pointers, making Rasterio more robust when reading CRS that don't map
  perfectly to PROJ.
- Ensure that GDAL and PROJ support files can be found in Rasterio wheels when